--- a/public/css/theme-2-mix.css
+++ b/public/css/theme-2-mix.css
@@ -29528,11 +29528,11 @@ i.ico-hover:hover {
 .language-switcher .btn{
 	border-radius: 0;
 }
-.dropdown-toggle::after{
-	display:none;
+.language-switcher .dropdown-toggle::after {
+    display:none;
 }
-.language-switcher ul.dropdown-menu{
-	border: 0px !important;
+.language-switcher .dropdown-menu{
+	padding: 0px;
 }
 #searchResponse, #mainSearchResponse{
 	width: 100%;
